   * Removed night_compensate feature. This functionality is covered by noise_tune. (Joerg Weber)
   * Implemented a new reference frame algorithm to improve object recognition and location. (Joerg Weber)
   * Improved smartmask feature: real moving objects don't trigger the mask anymore. (Joerg Weber)
   * Added Flash video format (FLV) to ffmpeg. 
     http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2007x07x19x131921 (Timo Taskinen)

Bugfixes
   * Handle mjpeg decoding and fix color issue adding mjpegtools dependecy
     http://www.lavrsen.dk/twiki/bin/view/Motion/MjpegColorIssue 
     http://www.lavrsen.dk/twiki/bin/view/Motion/MjpegToYUV420pPatch
     (Marius Rieder, Angel Carpintero).     
   * Fixed a problem with locate and fixed mask overlay (Dag Erlandsson).
   * Preview pictures get the timestamp of moment they were captured (Dag Erlandsson).


3.2.8 Formal Release - Summary of Changes

Features
   * Added connection status for all devices available from http web interface.
     (Angel Carpintero).
     http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2006x11x09x050638
   * Improved deb packaging, install the init.d script. (Angel Carpintero).
   * Added swf codec to video creation (Bowser Pete, Andy Brown).
     http://www.lavrsen.dk/twiki/bin/view/Motion/FFmpegSWFcreation
   * Added V4L2 support (Krzysztof Blaszkowski, Angel Carpintero).
     http://www.lavrsen.dk/twiki/bin/view/Motion/VideoForLinuxTwoDiscussion,
   * Added support for V4L2_PIX_FMT_SBGGR8 ( bayer ), V4L2_PIX_FMT_SN9C10X,
     V4L2_PIX_FMT_MJPEG and V4L2_PIX_FMT_UYVY (Angel Carpintero).
   * ucvideo track pan/tilt support ( Michal Licko ,Dirk Wesenberg and
     Angel Carpintero )
     http://www.lavrsen.dk/twiki/bin/view/Motion/LinuxUvcTrackingPatch 
   * Added a FreeBSD directory to allow people from BSD to get a daily version
     and create a port. (Angel Carpintero).
   * Removed mysql dependency from debian package and added a note to setup