@@ -241,6 +241,7 @@ ffmpeg_variable_bitrate 0
 # it requires no installation of codec on the Windows client.
 # swf - gives you a flash film with extension .swf
 # flv - gives you a flash video with extension .flv
+# ffv1 - FF video codec 1 for Lossless Encoding ( experimental )
 #
 ffmpeg_video_codec mpeg4
 
